style.css
#backgroundWrap {
    z-index: -1;
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-image: linear-gradient(rgba(0,0,0,.2),rgba(0,0,0,.2)),url("background.gif");
    background-size: cover;
}

body {
    color: white;
}

b {
    color: #FFCB05;
    font-weight: normal;
}

sub {
    font-size: 2vmin;
}

#sidebar {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 2;
    top: 0;
    left: 0;
    background-color: black;
    overflow-x: hidden;
    padding-top: 5vh;
    text-align: right;
    transition: 0.3s;
}

#sidebar a {
    padding-right: 2vw;
    padding-bottom: 2vh;
    padding-top: 2vh;
    text-decoration: none;
    font-size: 5vmin;
    color: #dad9d4;
    display: block;
    transition: 0.3s;
}

#sidebar a:hover, #openbtn:hover {
    color: white;
}

#closebtn {
    font-size: 10vmin;
    padding-bottom: 4vh;
}

#openbtn {
    font-size: 8vmin;
    text-decoration: none;
    color: #dad9d4;
    position: fixed;
    top: 0;
    left: 0;
    padding-left: 5vw;
    padding-top: 5vh;
    z-index: 1;
}

#header {
    text-align: right;
    padding-right: 5vw;
    padding-top: 5vh;
    margin-left: auto;
    margin-right: 0;
    width: 95vw;
    height: 100vh;
}

#header h1 {
    font-size: 25vmin;
}

#header hr {
    width: 75vmin;
    float: right;
}

#subtitle {
    font-size: 8vmin;
}

.section {
    padding: 5vh 5vw;
    height: 100vh;
}

.section h5, p {
    font-size: 5vmin;
}

.card {
    background-color: transparent;
}

.card p {
    font-size: medium;
}

#emailLink {
    color: #FFCB05;
}

#linkedinLink {
    color: #2a92ee;
}

#githubLink, #videoLink {
    color: #e24763;
}

.section-title {
    font-size: 10vmin;
    text-align: right;
    padding-bottom: 5vh;
}

.line {
    display: block;
    width: 75vmin;
    border-top: 1px solid white;
}

#header .line {
    margin-left: auto;
    margin-right: 0;
}

#contact .line {
    margin-right: auto;
    margin-left: 0;
}

@media (max-width: 1200px) {
    .card-columns {
        column-count: 2;
    }
}

@media (max-width: 800px) {
    .card-columns {
        column-count: 1;
    }
}

